...
        return ControlEvent(events: ob)
    }
}

class MessageInputView: UIView {
    let searchTF = UITextField().then { n in
        n.placeholder = "输入文字"
    }

    let sendBtn = UIButton().then { btn in
        btn.setTitle("发送", for: .normal)
        btn.setTitleColor(.white, for: .normal)
        btn.backgroundColor = .red
    }

    override init(frame: CGRect) {
        super.init(frame: frame)
...
